[gd_scene format=3 uid="uid://d01jwr4g2s6vx"]

[ext_resource type="Script" path="res://scripts/ui/SetupScreen.gd" id="1_setup"]

[node name="SetupScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_setup")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Set Timer"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="MinutesLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Minutes:"

[node name="MinutesSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 60.0
value = 5.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"
